@@ -20,6 +20,16 @@ $context['pretty']['board_urls'] = unserialize($modSettings['pretty_board_urls']
 cleanRequest();
 ]]></add>
 		</operation>
+
+		<operation>
+			<search position="replace"><![CDATA[
+		'mergetopics' => array('SplitTopics.php', 'MergeTopics'),
+]]></search>
+			<add><![CDATA[
+		'mergetopics' => array('SplitTopics.php', 'MergeTopics'),
+		'messageindex' => array('MessageIndex.php', 'MessageIndex'),
+]]></add>
+		</operation>
 	</file>
 
 	<file name="$sourcedir/ManageBoards.php">
@@ -76,8 +86,15 @@ function cleanRequest()
 ]]></search>
 			<add><![CDATA[
 		// Now make absolutely sure it's a number.
-		// Check for pretty board URLs too!
-		$board = (int) (is_numeric($_REQUEST['board']) ? $_REQUEST['board'] : array_search(strtolower($_REQUEST['board']), $context['pretty']['board_urls']));
+		// Check for pretty board URLs too, and possibly redirect if oldschool queries were used.
+		if (is_numeric($_REQUEST['board']))
+		{
+			$board = (int) $_REQUEST['board'];
+			if (!isset($_REQUEST['action']))
+				$context['pretty']['oldschoolquery'] = true;
+		} else {
+			$board = (int) array_search(strtolower($_REQUEST['board']), $context['pretty']['board_urls']);
+		}
 ]]></add>
 		</operation>
 	</file>
